add user guide and shiny

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,9 +20,9 @@ website:
       - text: "Shiny App"
         menu:
           - text: "User Guide"
-            href: shinyapp/shinyapp1.html
+            href: userguide.html
           - text: "Shiny App"
-            href: shinyapp/shinyapp2.html
+            href: Shinyapp.html
       - text: "Project Poster"
         href: Poster.html
 
